--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/mystyles.css">
     <title>Le Chocolat</title>
 </head>
 
@@ -14,7 +15,7 @@
 
     <header class="jumbotron">
         <div class="container">
-            <div class="row">
+            <div class="row row-header">
                 <div class="col-12 col-sm-8">
                     <h1>Le Chocolat</h1>
                     <p>We combine experience with creativity to create innovative tastes based on classic chocolate
@@ -27,7 +28,7 @@
     </header>
 
     <div class="container">
-        <div class="row">
+        <div class="row row-content align-items-center">
             <div class="col-sm-4 col-md-3">
                 <h3>Our famous chocolates</h3>
             </div>
@@ -38,7 +39,7 @@
         </div>
 
 
-        <div class="row">
+        <div class="row row-content align-items-center">
             <div class="col-sm-4 col-md-3">
                 <h3>WEEK’S OFFER</h3>
             </div>
@@ -48,7 +49,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row row-content align-items-center">
             <div class="col-sm-4 col-md-3">
                 <h3>Meet our Specialists</h3>
             </div>
@@ -61,7 +62,7 @@
         </div>
     </div>
 
-    <footer>
+    <footer class="footer">
         <div class="container">
             <div class="row">
                 <div class="col-5 offset-1 col-sm-2">
@@ -84,8 +85,8 @@
                         Email: <a href="mailto:chocolat@nomail.net">chocolat@nomail.net</a>
                     </address>
                 </div>
-                <div class="col col-sm-4">
-                    <div class="col-auto">
+                <div class="col col-sm-4 align-self-center">
+                    <div class="col-auto" style="text-align:center">
                         <a href="http://google.com/+">Google+</a>
                         <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
                         <a href="http://www.linkedin.com/in/">LinkedIn</a>
@@ -95,7 +96,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row justify-content-center">
                 <div class="col-auto">
                     <p> &copy; Copyright 2018 Le Chocolat</p>
                 </div>
